Commit-XXIII : Update main site.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div class="col-3 left">
         <div id="innerwrap">
           <div class="row-6">
-            <hr style="margin-top: 20px;" />
+            <hr style="margin-top: 20px" />
             <img
               src="images/download.png"
               alt=""
@@ -86,26 +86,24 @@
           <div class="row-4">
             <ul class="profileUL one">
               <li class="">
-                Age -<span style="float: right; margin-right: 15px;"> 18</span>
+                Age -<span style="float: right; margin-right: 15px"> 18</span>
               </li>
               <li class="">
                 Current Occupation-<span
-                  style="float: right; margin-right: 15px;"
+                  style="float: right; margin-right: 15px"
                 >
                   Student</span
                 >
               </li>
               <li class="">
-                Currently at-<span style="float: right; margin-right: 15px;">
-                  Trichy,India</span
+                Currently at-<span style="float: right; margin-right: 15px">
+                  Surat,Gujarat,India</span
                 >
               </li>
             </ul>
             <ul class="profileUL two hide">
               <li class="text-center">Age -18</li>
-              <li class="text-center">
-                Currently Student
-              </li>
+              <li class="text-center">Currently Student</li>
               <li class="text-center">At Trichy,India</li>
             </ul>
           </div>
@@ -123,7 +121,7 @@
           <hr />
           <div class="mybox bg-dark text-white p-1">
             <div class="img_container">
-              <img src="images/phot.jpg" alt="" />
+              <img src="images/phot.png" id="dp" draggable="false" alt="" />
             </div>
             <p>
               Hey There Visitor ! <br />
@@ -143,13 +141,6 @@
                   <h3 class="card-title">Sports</h3>
                 </div>
               </div>
-
-              <div class="card wow zoomIn">
-                <img src="images/hobby2.png" alt="" class="card-img-top" />
-                <div class="card-body">
-                  <h3 class="card-title">Reading</h3>
-                </div>
-              </div>
             </div>
             <div class="col-4">
               <div class="card wow zoomIn">
@@ -158,26 +149,12 @@
                   <h3 class="card-title">Music</h3>
                 </div>
               </div>
-
-              <div class="card wow zoomIn">
-                <img src="images/hobby4.png" alt="" class="card-img-top" />
-                <div class="card-body">
-                  <h3 class="card-title">Dance</h3>
-                </div>
-              </div>
             </div>
             <div class="col-4">
               <div class="card wow zoomIn">
                 <img src="images/hobby5.png" alt="" class="card-img-top" />
                 <div class="card-body">
                   <h3 class="card-title">Coding</h3>
-                </div>
-              </div>
-
-              <div class="card wow zoomIn">
-                <img src="images/hobby2.png" alt="" class="card-img-top" />
-                <div class="card-body">
-                  <h3 class="card-title">Sports</h3>
                 </div>
               </div>
             </div>
@@ -338,33 +315,23 @@
             <h2>Soft Skills</h2>
             <h4>Communication</h4>
             <div class="progress">
-              <div class="progress-bar bg-success" style="width: 80%;">
-                80%
-              </div>
+              <div class="progress-bar bg-success" style="width: 80%">80%</div>
             </div>
             <h4>Problem Solving</h4>
             <div class="progress">
-              <div class="progress-bar bg-success" style="width: 90%;">
-                90%
-              </div>
+              <div class="progress-bar bg-success" style="width: 90%">90%</div>
             </div>
             <h4>Creativity</h4>
             <div class="progress">
-              <div class="progress-bar bg-success" style="width: 80%;">
-                80%
-              </div>
+              <div class="progress-bar bg-success" style="width: 80%">80%</div>
             </div>
             <h4>Interpersonal Skills</h4>
             <div class="progress">
-              <div class="progress-bar bg-success" style="width: 75%;">
-                75%
-              </div>
+              <div class="progress-bar bg-success" style="width: 75%">75%</div>
             </div>
             <h4>LeaderShip</h4>
             <div class="progress">
-              <div class="progress-bar bg-success" style="width: 90%;">
-                90%
-              </div>
+              <div class="progress-bar bg-success" style="width: 90%">90%</div>
             </div>
           </div>
         </section>
@@ -374,21 +341,18 @@
           </div>
           <hr />
           <div class="banner">
-            <span id="s1" class="counter">
-              10
-            </span>
+            <span id="s1" class="counter"> 10 </span>
             <span id="s1">
               <br />
               +Events</span
             >
-            <span class="counter">
-              100
-            </span>
+            <span class="counter"> 100 </span>
             <span id="s2">
               <br />
               +Experiences</span
             >
           </div>
+          <div class="exp-body"></div>
           <div></div>
         </section>
         <section class="sec-4" id="sec-4">
@@ -396,44 +360,7 @@
             <h1 id="lamba">Achivements</h1>
           </div>
           <hr />
-          <div class="tree">
-            <div class="row level" id="lefttree">
-              <div class="col-7 left">
-                <div class="info">
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Quibusdam, iste?
-                  </p>
-                </div>
-              </div>
-              <div class="col-5"><div class="info"></div></div>
-            </div>
-            <div class="row level" id="righttree">
-              <div class="col-5"><div class="info"></div></div>
-              <div class="col-7 right">
-                <div class="info">
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Quibusdam, iste?
-                  </p>
-                </div>
-                <div class="info"></div>
-              </div>
-            </div>
-            <div class="row level last" id="lefttree">
-              <div class="col-7 left">
-                <div class="info">
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Quibusdam, iste?
-                  </p>
-                </div>
-              </div>
-              <div class="col-5">
-                <div class="info"></div>
-              </div>
-            </div>
-          </div>
+          <div class="achi-body"></div>
         </section>
         <script>
           function showcard(e) {
@@ -449,7 +376,7 @@
             <h1>My Works</h1>
           </div>
           <hr />
-          <h3 style="text-align: center;">
+          <h3 style="text-align: center">
             Some things that I have tried making.
           </h3>
           <h3 id="mob" class="ml-5">Tap any to see more</h3>
@@ -633,28 +560,29 @@
           </div>
           <hr />
           <div class="form-container col s10 offset-s1 z-depth-1 hoverable">
+            <h3 class="p-2">Currently Doesnt Work</h3>
             <form action="#" class="col s12">
               <div class="input-field col s12 m6">
                 <i class="material-icons prefix">person</i>
-                <input id="first_name" type="text" class="validate" />
+                <input id="first_name" type="text" disabled class="validate" />
                 <label for="first_name">First Name</label>
               </div>
               <div class="input-field col s12 m6">
                 <i class="material-icons prefix">person</i>
-                <input id="last_name" type="text" class="validate" />
+                <input id="last_name" type="text" disabled class="validate" />
                 <label for="last_name">Last Name</label>
               </div>
               <div class="row">
                 <div class="input-field col s12">
                   <i class="material-icons prefix">mail</i>
-                  <input id="email" type="email" class="validate" />
+                  <input id="email" type="email" disabled class="validate" />
                   <label for="email">Email</label>
                 </div>
               </div>
               <div class="row">
                 <div class="input-field col s12">
                   <i class="material-icons prefix">call</i>
-                  <input id="phone" type="number" class="validate" />
+                  <input id="phone" type="number" disabled class="validate" />
                   <label for="phone">Phone Number</label>
                 </div>
               </div>
@@ -662,9 +590,9 @@
                 <div class="input-field col s12">
                   <i class="material-icons prefix">mode_edit</i>
                   <textarea
-                    type="email"
                     id="textarea"
                     class="materialize-textarea"
+                    disabled
                   ></textarea>
                   <label class="active" for="textarea">Message</label>
                 </div>
@@ -672,6 +600,7 @@
               <button
                 class="btn blue lighten-2 btn-medium waves-effect mb-4"
                 type="submit"
+                disabled
               >
                 <i class="material-icons left">send</i>Send
               </button>
@@ -792,17 +721,26 @@
         </div>
         <div class="social col-6">
           <div class="icon-bar">
-            <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-            <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-            <a href="#" class="google"><i class="fa fa-google"></i></a>
-            <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
-            <a href="#" class="youtube"><i class="fa fa-youtube"></i></a>
+            <a href="https://www.instagram.com/_marmik_07/" class="instagram"
+              ><i class="fa fa-instagram"></i
+            ></a>
+            <a href="mailto:marmikupadhyay.mu@gmail.com" class="google"
+              ><i class="fa fa-envelope"></i
+            ></a>
+            <a
+              href="https://www.linkedin.com/in/marmik-upadhyay-8657bb1b5/"
+              class="linkedin"
+              ><i class="fa fa-linkedin"></i
+            ></a>
+            <a href="https://github.com/marmikupadhyay" class="github"
+              ><i class="fa fa-github"></i
+            ></a>
           </div>
         </div>
-        <div class="foot">
+        <div class="foot" style="color: rgb(255, 255, 255)">
           <h2>
             Made with
-            <span style="color: rgba(255, 0, 0, 0.7);">&#x2764;</span> By Marmik
+            <span style="color: rgba(255, 0, 0, 0.7)">&#x2764;</span> By Marmik
           </h2>
         </div>
       </div>
